[package]
name = "itx-impl"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
itx-contract = { path = "../itx-contract" }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "mysql", "postgres", "uuid", "time"] }
time = "0.3"
uuid = { version = "1", features = ["v4"] }
